--- a/Assignment3_PigGame/app/src/main/AndroidManifest.xml
+++ b/Assignment3_PigGame/app/src/main/AndroidManifest.xml
@@ -9,13 +9,20 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".FirstActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".SecondActivity"
+            android:label="Computer Move"
+            android:launchMode="singleInstance"
+            android:parentActivityName=".FirstActivity" >
         </activity>
         <activity
             android:name=".SettingsActivity"
